[package]
name = "sefer-alloc"
version = "0.3.0"
edition = "2021"
# Matches the resocks5 ecosystem floor; the core is plain safe Rust and will
# build on much older toolchains, but we pin a known-good MSRV from day one.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "A safe-by-construction, 100% Rust memory toolkit (no C/C++ libraries — no libnuma/mimalloc/jemalloc/snmalloc/tcmalloc): a single-threaded handle store (Region<T>) and a drop-in #[global_allocator] (SeferAlloc) over one verified segment substrate. The base crate is #![forbid(unsafe_code)]; the allocator features flip the crate root to #![deny(unsafe_code)] with unsafe confined to a small, audited seam set (see the README unsafe-boundary section)."
readme = "README.md"
repository = "https://github.com/PHPCraftdream/sefer-alloc"
homepage = "https://github.com/PHPCraftdream/sefer-alloc"
documentation = "https://docs.rs/sefer-alloc"
keywords = ["allocator", "arena", "generational", "handle", "lock-free"]
categories = ["data-structures", "memory-management", "concurrency", "no-std"]
# Dev-only tooling excluded from the published crates.io tarball: the Node
# hardening-sweep runners (loom/miri/TSan), CI workflows, and session
# checkpoints are irrelevant to a downstream consumer of the library.
exclude = [
    "scripts/",
    "package.json",
    ".github/",
    "docs/checkpoints/",
]

# docs.rs: build the rendered documentation with the full `production` feature
# bundle so the `SeferAlloc`/`AllocStats`/registry API pages (all gated on
# `alloc-global` and friends) are present and their intra-doc links resolve.
# A plain default-feature `cargo doc` does not compile those items, so the
# crate-root overview refers to them as inline code rather than links to stay
# warning-clean under every feature configuration (task #136).
[package.metadata.docs.rs]
features = ["production"]

# Workspace root. `sefer-alloc` is the root crate AND the workspace; the
# extracted, independently-publishable building blocks live under `crates/`:
#   - sefer-region    (crates/region)       — typed handle store (Handle<T>/Region<T>)
#                                             #![forbid(unsafe_code)]
#   - aligned-vmem    (crates/vmem)         — OS virtual-memory aperture
#                                             #![allow(unsafe_code)], single-purpose, audit-friendly
#   - numa-shim       (crates/numa)         — dependency-free NUMA detection + binding
#                                             #![allow(unsafe_code)], single-purpose, audit-friendly
#   - malloc-bench-rs (crates/malloc-bench) — portable GlobalAlloc benchmark harness
#                                             standalone, not in sefer-alloc runtime dep tree
# Each is a real crates.io crate someone can `cargo add` on its own; sefer-alloc
# re-exports sefer-region's surface for backward compatibility, and delegates its
# OS-unsafe seams to aligned-vmem and numa-shim (thin interop wrappers).
[workspace]
members = ["crates/vmem", "crates/numa", "crates/malloc-bench", "crates/region"]
resolver = "2"

[lints.rust]
# `loom` is a build-time cfg (set via `RUSTFLAGS="--cfg loom"`) that gates the
# loom model-check harness. Declare it so `unexpected cfg` warnings are silent.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(kani)'] }

[features]
# The single-threaded core (`Region<T>` / `Handle<T>`) needs only `alloc` and
# builds under `no_std`. `std` (default-on) is required only for `SyncRegion`
# (it wraps `std::sync::RwLock`) and the concurrent tier. Disable default
# features to get the bare `no_std` + `alloc` core.
default = ["std"]
std = ["sefer-region/std"]
# Phase 3b: lock-free reads. The concurrent tier is opt-in; it requires `std`
# (its deps need it) and pulls in only `arc-swap` + `crossbeam-epoch` beyond the
# core.
# - 3b-I (`arc-swap`): RCU with page-granularity copy-on-write — zero `unsafe`
#   of our own.
# - 3b-II (`crossbeam-epoch`): per-slot atomics + epoch reclamation — the single
#   confined `unsafe` Hand organ (src/concurrent/hand.rs), the only module with
#   `#![allow(unsafe_code)]`. See docs/PLAN.md.
experimental = ["std", "dep:arc-swap", "dep:crossbeam-epoch"]
# Phase 7c: thread-per-core pinning. Additive over `experimental` — pulls in
# `core_affinity` (a safe wrapper over the OS affinity syscalls; zero `unsafe`
# of our own) and exposes an explicit shard-binding API plus a thread-per-core
# runner on `ShardedRegion`. The default and `experimental` builds do NOT pull
# `core_affinity`: this feature is purely opt-in. See docs/PLAN.md §7c.
#
# NOTE (review 2.5): `pinning` inherits ALL of `experimental`'s deps — including
# `arc-swap` + `crossbeam-epoch` (the legacy research concurrent tier) — even
# though `PinnedRunner` itself uses ONLY `core_affinity` + `ShardedRegion`
# (`src/concurrent/pinning.rs`; `sharded_region.rs` references neither arc-swap
# nor crossbeam-epoch). It depends on `experimental` because `ShardedRegion` is
# gated there, not because it needs the epoch/RCU types. Narrowing this (moving
# `ShardedRegion` behind a leaner sub-feature so `pinning` need not drag in the
# whole legacy tier) is a real feature-graph refactor and is intentionally NOT
# attempted here; documented as a known, accepted over-inclusion.
pinning = ["experimental", "dep:core_affinity"]
# Phase 8: the segment substrate + self-hosted metadata — the foundation of a
# real allocator (the Membrane Inversion). OS-backed SEGMENT-aligned spans via a
# confined `unsafe` aperture (`mmap`/`VirtualAlloc`, NO `std::alloc` anywhere),
# a self-hosted `SegmentTable` carved from the first primordial segment,
# per-segment `PageMap` / `BinTable`, and single-threaded
# `alloc`/`dealloc`/`realloc`/`alloc_zeroed`. The alloc path is provably
# reentrancy-free (M5): no `Vec`/`Box`/`HashSet`/`std::alloc`/`format!` is
# reachable — all metadata self-hosts in segment memory. This is single-threaded
# correctness-first; per-thread heaps + concurrency are Phases 9–10. Introduces
# two confined-`unsafe` modules — `alloc_core::os` (the OS aperture) and
# `alloc_core::node` (the intrusive free-list node seam, the generalized `hand`
# discipline) — so the crate switches to `deny(unsafe_code)` with this feature
# on; `unsafe` outside those modules stays a hard error. Requires `std` (the OS
# syscalls are std-gated). See `docs/ALLOC_PLAN.md` §5 P8 and §6.
alloc-core = ["std", "dep:aligned-vmem"]
# Cross-thread free support. Adds per-segment `RemoteFreeRing`s (lock-free
# SPSC rings) for cross-thread `dealloc`, the `dealloc_any_thread` entry point,
# owner stamping on segment headers, and the whole-slot-reuse teardown model
# (`AbandonGuard::drop` recycles the slot with the `HeapCore` staying whole —
# all segments and their remote-free queues are preserved for the next claimant
# to reclaim lazily; the old abandon/adopt segment-transfer substrate was
# removed in task #97 / R4-5 — see CHANGELOG.md). Without this feature, the
# `alloc-core` substrate provides single-thread-only allocation (sound: single
# owner, no cross-thread refs). Requires `alloc-core`.
alloc-xthread = ["alloc-core"]
# Phase 11: the drop-in `GlobalAlloc` face -- `SeferAlloc`. Installs over the
# per-thread `HeapCore` substrate via the registry-backed raw-pointer TLS
# binding (allocation-free lazy init). The `unsafe impl GlobalAlloc` is the
# single new `unsafe` surface of this phase -- it is the documented malloc-face
# seam (the trait is `unsafe`; the body delegates to the already-proven safe
# `HeapCore` entry points). Every entry point is no-panic (a panic in a global
# allocator aborts the process): checked branches return null on OOM, never
# panic/abort. Reentrancy-free (M5) is upheld structurally: no
# `Vec`/`Box`/`HashSet`/`std::alloc`/`format!` on the path -- the TLS init is
# the lazy allocation-free discipline. Requires `alloc-core`. Add `alloc-xthread`
# alongside it for the multi-thread face (cross-thread `dealloc` via
# per-segment `RemoteFreeRing`s).
alloc-global = ["alloc-core"]
# Phase 35: M6 decommit — return the payload pages of an empty small segment to
# the OS (Win `VirtualFree MEM_DECOMMIT` / unix `madvise MADV_DONTNEED`) when its
# live-block count drops to zero, recommitting on first reuse. Additive over
# `alloc-core`: it adds an owner-only `live_count` field to the segment header
# (the field is present in EVERY build's layout so the byte layout is stable;
# its mutation/read is gated on this feature) and wires the decommit/reset/
# recommit policy into the own-thread free + cross-thread reclaim + carve paths,
# all under `#[cfg(feature = "alloc-decommit")]`. With this feature OFF the
# default build is byte-for-byte unchanged. NO new dependency and NO new `unsafe`
# site — the OS seam (`os::decommit_pages`/`recommit_pages`) already exists; the
# new bookkeeping is plain safe arithmetic through the `node` seam. M6 is
# decommit-safe WITHOUT crossbeam-epoch / M11 — see the safety argument at the
# decommit point in `alloc_core` and `docs/PHASE35_DECOMMIT_DESIGN.md` §1.
# Requires `alloc-core`. Default OFF.
alloc-decommit = ["alloc-core"]
# Convenience alias: the recommended feature set for long-running multi-thread
# workloads (DBMS-style, async runtimes, anything that creates and frees many
# segments over time). Without `alloc-decommit` the SegmentTable free-list
# still recycles freed large-segment slots unconditionally, but empty
# small segments cannot be recycled until they are decommitted; long-running
# processes with many small-segment carve/decay cycles will pin slots and
# eventually hit the 1024 cap. `alloc-decommit` closes this by decommitting
# empty small segments and freeing their slot (#60). Add this feature for any long-running deployment.
# Phase P2/P4/P7 per-thread magazine cache (tcache) layered over
# `alloc-global`. 0.3.0 (task A2): now ALSO pulls in `alloc-xthread`. Without
# `alloc-xthread`, a cross-thread free of a small block still has to land
# SOMEWHERE — with `fastbin` alone (the old feature set) there was no
# ownership-checked routing path, so a naive cross-thread free would have
# written directly into the magazine/free-list of a heap it does not own: an
# unchecked, unsynchronised write into another thread's private data
# structure — a genuine data race, not merely a missed optimisation.
# `alloc-xthread` is what gives `dealloc_routing` the owner-identity stamp
# (`owner_thread_free`) and the per-segment `RemoteFreeRing` that make a
# cross-thread free safe to route at all; `fastbin` must never be built
# without it. See also the `compile_error!` defence-in-depth guard in
# `src/lib.rs`.
fastbin = ["alloc-global", "alloc-xthread"]
production = ["alloc-global", "alloc-xthread", "alloc-decommit", "fastbin"]
# Task W3 (0.3.0): opt-in per-hit DIAGNOSTIC counters. When ON, the magazine
# (tcache) and large-segment cache HIT fast paths each bump their heap's
# slot-resident `AtomicU64` hit counter (a Relaxed load+store, ~2 mem-ops per
# hit), and `SeferAlloc::stats().tcache_hits` / `.large_cache_hits` report the
# real process-wide totals. When OFF (the default, and NOT part of
# `production`), those increments are compiled OUT of the hit fast paths and the
# two `stats()` fields read 0. This trades a small hot-path instruction saving
# for the loss of the two production hit-rate diagnostics; enable `alloc-stats`
# (e.g. `--features "production alloc-stats"`) when you want the counters. The
# counter STORAGE (the slot fields + the aggregators) is always present — only
# the per-hit WRITE is gated — so turning the feature on/off never changes the
# ABI/layout, and a build with it off still safely reads 0 from every slot.
#
# Depends on `alloc-core`: on its own `alloc-stats` has nothing to count (the
# per-event increments it gates live in the `alloc-core`/`alloc-global`
# allocator stack), so `--features alloc-stats` alone used to compile a silent
# no-op — a footgun with no guard (review finding 2.4). Pulling in `alloc-core`
# makes the compiler refuse the useless-in-isolation combination: turning the
# stats counters on now transitively enables the allocator whose events they
# count. Safe (every real caller already builds it `alongside production`,
# which pulls `alloc-core`) and a strictly stronger guard than a doc note.
alloc-stats = ["alloc-core"]
# H1 (task #167): PARANOID deploy hardening — opt-in defence-in-depth against
# UNSAFE-CALLER misuse that costs cycles on the free hot path and is therefore
# NOT free enough to enable unconditionally. Default OFF; NOT part of
# `production` (the fast default). Currently gates the interior-pointer free
# guard on BOTH own-thread small-free faces — the `SeferAlloc` per-thread
# magazine (`HeapCore`) AND the substrate (`AllocCore::dealloc_small`, which is
# what any direct `AllocCore` / non-magazine substrate user
# reaches): each verifies `off % block_size(class) == 0` before touching the M2
# oracles, turning a free of a pointer that is not the block start (offset not a
# whole number of block_sizes) into a detected no-op instead of a mis-indexed
# bitmap read → double-issue / free-list corruption. (The cross-thread leg is
# already covered UNCONDITIONALLY by `reclaim_offset`'s identical check.)
# The check is a modulo by a non-power-of-two block_size (a real division, ~tens
# of cycles) on EVERY small free, so it is honestly a paid check — hence gated
# here, not on the production hot path. Additive over `fastbin` (the build that
# has the magazine free path this guards); enabling it without the magazine is a
# no-op. See README "Hardened vs production".
hardened = ["fastbin"]
# NUMA-aware segment reservation: when a new segment is reserved, pages are
# steered to the NUMA node of the calling thread
# (Linux: mbind(2), Windows: VirtualAllocExNuma).
# macOS: no-op (no public NUMA API). Default OFF. Requires `alloc-core`.
numa-aware = ["alloc-core", "dep:numa-shim"]

[dependencies]
# Phase 1: typed handle store (Region<T> + Handle<T> + SyncRegion<T>), extracted
# from sefer-alloc into a standalone, independently-publishable crate alongside
# aligned-vmem / numa-shim / malloc-bench-rs. sefer-alloc re-exports its surface
# for backward compatibility — existing users of `use sefer_alloc::{Region,
# Handle, SyncRegion}` continue to work unchanged. New consumers who want ONLY
# the handle store (no allocator stack) should depend on `sefer-region` directly.
#
# `default-features = false`: sefer-region gates its std-dependent SyncRegion on
# its own `std` feature, which we re-enable via our own `std` feature so the
# no_std core compiles without it and the default build gets SyncRegion as before.
sefer-region = { path = "crates/region", version = "0.1", default-features = false }
# Phase 3b-I: atomic snapshot publication for lock-free reads. Optional — only
# the `experimental` concurrent tier pulls it in. Its internal `unsafe` is the
# dependency's, not ours; our crate stays `#![forbid(unsafe_code)]` with it on.
arc-swap = { version = "1", optional = true }
# Phase 3b-II: epoch-based memory reclamation for the per-slot-atomics lock-free
# read tier. Optional — only pulled in by `experimental`. Its `unsafe` is the
# dependency's; OUR `unsafe` is confined to src/concurrent/hand.rs (the single
# documented `#![allow(unsafe_code)]` module) and is wrapped in a safe-to-use
# `AtomicSlot<T>` API. See docs/PLAN.md.
crossbeam-epoch = { version = "0.9", optional = true }
# Phase 7c: OS thread-to-core pinning for the thread-per-core runner. A safe
# wrapper over `sched_setaffinity` (Linux) / `SetThreadAffinityMask` (Windows)
# / `thread_policy_set` (macOS). Optional — only the `pinning` feature pulls it
# in. Pinning is best-effort on some OSes; the runner still runs correctly if
# the host refuses the affinity. See docs/PLAN.md §7c.
core_affinity = { version = "0.8", optional = true }
# Phase 8 (alloc-core) OS aperture: SEGMENT-aligned anonymous virtual memory,
# page-level decommit/recommit. Extracted from sefer-alloc into a standalone
# crate so it can be used and published independently. Pulled in ONLY by the
# `alloc-core` feature (and every feature that depends on it).
aligned-vmem = { path = "crates/vmem", version = "0.1", optional = true }
# Phase 78 (numa-aware) NUMA seam: dependency-free NUMA detection + binding,
# extracted from sefer-alloc into a standalone crate so it can be published
# independently. Pulled in ONLY by the `numa-aware` feature.
numa-shim = { path = "crates/numa", version = "0.1", features = ["vmem-integration"], optional = true }

[dev-dependencies]
# Phase 2 dependency: the locality bench compares `Region` against raw
# `slotmap::SlotMap` / `DenseSlotMap`. slotmap is no longer a direct production
# dep (it lives in `sefer-region`), but the bench still needs it for the head-
# to-head numbers. Dev-only.
slotmap = "1"
# Phase 0 dependency: property-based differential testing against a reference
# model. This is the heart of the verification-first build — see docs/PLAN.md.
proptest = "1"
# Task #52: tokio burn-in example — async runtime driving SeferAlloc as
# #[global_allocator].  Minimal feature set: rt-multi-thread (multi-thread
# scheduler), macros (#[tokio::main]), sync (mpsc channel), time (sleep /
# timeout / interval).  No fs/net/signal/process — not needed for the harness.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Phase 2: criterion benches that empirically choose the single-threaded
# backing container (SlotMap vs DenseSlotMap vs HashMap vs Vec<Box<T>>) across
# the iterate / lookup / churn axes. See docs/BENCHMARKS.md for the verdict.
criterion = "0.5"
# Phase 9: mimalloc for head-to-head benchmarking of the per-thread heap's
# alloc/dealloc hot path vs a state-of-the-art allocator. Dev-only — NOT a
# runtime dependency.
mimalloc = "0.1"

# Phase 3b-II: loom model-checks the publication PROTOCOL (generation/value
# ordering) of the epoch tier. loom and crossbeam-epoch do NOT compose (loom
# replaces the allocator and atomics), so the loom harness models a bare
# AtomicU32 generation + AtomicPtr value publication using loom's own atomics,
# NOT crossbeam. Reclamation correctness rests on the crate + miri, not loom.
# Built only under `cfg(loom)` (`RUSTFLAGS="--cfg loom"` / `--cfg loom`).
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

# Task #127: instruction-count CI perf-gate. `iai-callgrind` benchmarks run
# under Valgrind/Callgrind, which is Linux-only — scoped as a target-specific
# dev-dependency so it never affects the Windows/macOS build graph (the
# `benches/perf_gate_iai.rs` harness itself is also `#![cfg(target_os =
# "linux")]`-gated, so the crate is simply absent from non-Linux dep
# resolution and compilation). Dev-only — NOT a runtime dependency.
[target.'cfg(target_os = "linux")'.dev-dependencies]
iai-callgrind = "0.14"

[[bench]]
name = "locality"
harness = false

# Phase 7a: sharded write-scaling bench — `ShardedRegion` vs `SyncRegion` /
# `Arc<Mutex<Region>>` across thread counts. Quick criterion profile. Requires
# `experimental` (for `ShardedRegion`) and the default `std` (for `SyncRegion`).
[[bench]]
name = "sharded_write"
harness = false
required-features = ["experimental"]

# Phase 7c: pinned thread-per-core write bench — `ShardedRegion` writes with
# each worker pinned to a core AND explicitly bound to the matching shard, vs
# the unpinned 7a path. Quick criterion profile. Honest verdict: the win is
# workload-dependent (only manifests when the working set is cache-hot and
# shard-local); see the bench's module docs. Requires `pinning` (which brings
# `experimental` + `core_affinity`).
[[bench]]
name = "pinned_write"
harness = false
required-features = ["pinning"]

# Phase 11: `SeferAlloc` installed as `#[global_allocator]` vs `mimalloc` and
# the system allocator, exercising real Rust allocation patterns (Vec/Box churn).
# Quick criterion profile (sample_size 10, short warm-up). Honest verdict in
# docs/ALLOC_BENCH.md. Requires `alloc-global`.
[[bench]]
name = "global_alloc"
harness = false
required-features = ["alloc-global"]

# Task #54: large-block and realloc-heavy profiling — SeferAlloc vs mimalloc
# vs System across three groups: single-shot alloc+free of multi-MiB blocks,
# geometric grow via GlobalAlloc::realloc, and realloc under adversarial
# neighbour pressure. Quick criterion profile. Requires `alloc-global`.
[[bench]]
name = "large_realloc"
harness = false
required-features = ["alloc-global"]

# Phase 11: minimal example installing `SeferAlloc` as the `#[global_allocator]`.
# Gated so the default build does not try to compile it without the feature.
[[example]]
name = "global_allocator"
required-features = ["alloc-global"]

# RAD-1 / Phase 0(a): process-per-sample first-alloc RSS + latency probe — the
# E1 registry-bootstrap judge. Measures the ~16 MiB first-touch cost of the
# registry `next_free` materialisation, which is invisible to Criterion/iai (they
# run many iterations in one long-lived process where the pages are already
# resident). Driven by `scripts/first-alloc-bench.mjs`, which runs this binary
# N times as SEPARATE processes and aggregates. Requires the full `production`
# feature set: the inline `HeapCore` (and thus the registry footprint that
# exhibits the ~16 MiB first-touch) only reaches ~7.5 KiB/slot under
# `alloc-decommit` + `fastbin`; with just alloc-global+alloc-xthread each slot is
# ~192 B and the defect does not manifest. See the example's module docs.
[[example]]
name = "first_alloc_process"
required-features = ["alloc-global", "alloc-xthread", "alloc-decommit", "fastbin"]

# Phase 13.7: multi-thread macro-benchmark (larson + mstress sweep, T=1/2/4).
# The file is `#![cfg]`-gated on alloc-global + alloc-xthread; without this
# registration `cargo build` / `cargo test` (without `--tests`) tries to compile
# it under the default feature set and fails with E0601 (no `main`).
[[example]]
name = "malloc_macro"
required-features = ["alloc-global", "alloc-xthread"]

# Soak harness: high-load multi-thread stability test (32/64/128 threads, hours).
# NOT a throughput benchmark — a correctness + stability harness that detects
# panics, deadlocks, and accounting mismatches at scale.
# Run: `cargo run --release --example soak_xthread --features "alloc-global alloc-xthread"`
# Configure via SEFER_SOAK_THREADS=N and SEFER_SOAK_SECONDS=N (default: avail_par × 5s).
[[example]]
name = "soak_xthread"
required-features = ["alloc-global", "alloc-xthread"]

# Task #53: RSS-probe harness — measures resident-set-size and in-flight block
# count under asymmetric cross-thread free pressure (producers allocate only;
# 1 consumer frees only).  Designed to stress RemoteFreeRing and show the
# alloc-decommit recovery ratio.  NOT a throughput benchmark.
# Run: `cargo run --release --example rss_probe --features "alloc-global alloc-xthread"`
# With decommit: add `alloc-decommit` to the features list.
# Tune via env: SEFER_RSS_PRODUCERS, SEFER_RSS_SECONDS, SEFER_RSS_LARGE_FRACTION.
[[example]]
name = "rss_probe"
required-features = ["alloc-global", "alloc-xthread"]

# Task #62 §A-1: cross-thread free micro-bench — direct push→drain of the
# RemoteFreeRing via AllocCore test seams (dbg_push_to_ring +
# dbg_drain_all_rings), no tokio, no channels. Produces a low-noise flamegraph
# where criterion KDE overhead should be ≤ 50% (vs 84–85% in §1/§3 profiles).
# Documented in docs/PROFILE_FLAMEGRAPHS.md §6.
[[bench]]
name = "heap_xthread"
harness = false
required-features = ["alloc-core", "alloc-xthread"]

# R5-R5 (round5 performance review §6.2, §8.2 item 2, §10 Stage C): measures
# `SegmentTable`'s backward-shift deletion (R4-8/N3) cost as a function of
# probe-cluster length, via the `SegmentHashHarness` test-only seam (the same
# one `tests/segment_table_backshift_proptest.rs` uses). Single-delete timing
# with median/p95/p99/max reported via eprintln! (criterion's own summary
# only surfaces mean/median). Only needs `alloc-core` (the feature
# `SegmentHashHarness` is re-exported under).
[[bench]]
name = "segment_table_delete_cluster"
harness = false
required-features = ["alloc-core"]

# R5-R1 (round5 performance review §4.3/§10 Stage A.2): PRODUCTION cross-thread
# free path bench — real producer threads through HeapRegistry::claim /
# HeapCore::alloc / HeapCore::dealloc / HeapRegistry::recycle (the same
# production path tests/remote_fanin.rs exercises), NOT the dbg_push_to_ring/
# dbg_drain_all_rings test-only seam heap_xthread above uses. Sweeps a
# 1/2/4/8/16/32 producer-count matrix across two owner states (active,
# starved). See the bench file's module doc for the full rationale.
[[bench]]
name = "heap_fanin_production"
harness = false
required-features = ["alloc-global", "alloc-xthread"]

# R6-OPT-A2 (radical_optimization_review §4 P0-4 measurement plan / §5.5 item
# 5 / §6 Stage A.4): persistent-thread fan-in throughput/latency JUDGE — a
# clean successor to heap_fanin_production above, fixing its one structural
# flaw (thread spawn/join happening INSIDE the timed region). Threads are
# spawned ONCE per matrix cell, parked on std::sync::Barrier, and only the
# dealloc burst itself is timed. Custom timing-loop binary (harness = false,
# no criterion_main! — see the bench file's own module doc for why Criterion
# does not fit this matrix), reporting p50/p99/max per-op latency plus the
# same DBG_RING_* diagnostics heap_fanin_production already reads. Does NOT
# replace heap_fanin_production (kept as the correctness/stress control).
[[bench]]
name = "heap_fanin_persistent"
harness = false
required-features = ["alloc-global", "alloc-xthread"]

# R6-OPT-A3 (radical_optimization_review §4 P0-3 measurement plan / §5.5 item
# 8 / §6 Stage A.5): independent-alloc/free sweep JUDGE for the SMALL_MAX
# architectural cliff (258,752 B, per-segment small path -> 262,144 B literal
# 256 KiB, one dedicated 4 MiB span per object). Custom timing-loop binary
# (harness = false — see the bench file's own module doc for why Criterion
# does not fit: it cannot express "alloc N, hold live, batched-time the free"
# with percentile output, nor read this crate's own segment/table diagnostic
# counters at precise checkpoints). Sweeps size x cardinality x access-pattern
# (cold / repeated-reuse / random-lifetime / same-thread / cross-thread, the
# last gated on alloc-xthread) via --reduced/--full-matrix tiers mirroring
# R6-OPT-A2's pattern. Reports ns/op (alloc, free) with p50/p99/mean, OS
# segment-reservation-count deltas (the number that shows the cliff directly),
# SegmentTable occupancy, RSS/commit-charge snapshots (Windows
# PagefileUsage/WorkingSetSize, mirroring R6-OPT-A1's probe), and a computed
# internal-fragmentation ratio. This is Stage A — a measurement harness, not a
# source change; it exists so the blocked-on-this-task R6-OPT-P0-3 (a
# prototype "medium allocator" for 256 KiB-2 MiB) can honestly prove its
# claimed win against a real baseline. Only requires `alloc-core`; the
# cross-thread variant additionally needs `alloc-global` + `alloc-xthread`
# (gracefully skipped, with a clear message, when absent).
[[bench]]
name = "medium_size_sweep"
harness = false
required-features = ["alloc-core"]

# R5-R4 (round5 performance review §3 N1, §8.2 item 1, §10 Stage A.3/C):
# isolates round4's N1 change's teardown cost (AbandonGuard::drop wiring ->
# HeapCore::trim_for_recycle) from pure per-op allocation throughput. Reports
# ops-only throughput, an isolated drain-only cost (via
# SeferAlloc::dbg_trim_current_thread), and the full real thread-exit
# lifecycle (spawn -> N ops -> join, letting AbandonGuard::drop run for
# real) as SEPARATE bench groups, swept over N = 1 / 1_000 / 100_000
# operations per thread lifetime. See the bench file's module doc for the
# full rationale and the "subtract the empty-thread-spawn reference" method.
[[bench]]
name = "heap_lifecycle_teardown"
harness = false
required-features = ["alloc-global"]

# Task #62 §A-2: synthetic async-like allocation pattern — mixed-size
# alloc/dealloc/realloc (row buffers, accumulators, medium blobs) via
# SeferAlloc::GlobalAlloc called directly. No tokio runtime noise, no
# channels, no spawns. Single-threaded DBMS-pipeline simulation.
# Documented in docs/PROFILE_FLAMEGRAPHS.md §6.
[[bench]]
name = "heap_async_pattern"
harness = false
required-features = ["alloc-global"]

# Task #127: CI perf-gate — instruction-count regression guard via
# `iai-callgrind` (Callgrind emulation is deterministic run-to-run, unlike
# wall-clock criterion, so it tolerates a tight ~5-10% threshold on a shared
# CI runner without flaking). Linux-only: the harness is
# `#![cfg(target_os = "linux")]`-gated and the `iai-callgrind` dev-dependency
# is scoped to `cfg(target_os = "linux")` (see [target.'cfg(target_os =
# "linux")'.dev-dependencies] above), so `cargo build --benches` on
# Windows/macOS simply does not build this target's real body — `harness =
# false` still lets Cargo probe/compile the (empty-on-non-Linux) crate.
# Driven by `.github/workflows/perf-gate.yml`, NOT the default `cargo bench`
# path (requires `cargo install iai-callgrind-runner` + valgrind).
[[bench]]
name = "perf_gate_iai"
harness = false
required-features = ["alloc-global"]

# Task #52: tokio async burn-in — SeferAlloc as #[global_allocator] under a
# real tokio multi-thread runtime with a DBMS-pipeline-like async workload.
# All tokio-internal allocations also go through SeferAlloc.
# Run: `SEFER_BURNIN_SECONDS=10 SEFER_TOKIO_WORKERS=4 SEFER_BURNIN_TASKS=256 \
#        cargo run --release --example tokio_burn_in \
#        --features "alloc-global alloc-xthread"`
[[example]]
name = "tokio_burn_in"
required-features = ["alloc-global", "alloc-xthread"]

# ── §0 — Flamegraph profiling: debug-info is OPT-IN, NOT persistent ──────────
#
# Persistent `debug = true` in [profile.release] / [profile.bench] slows linking
# and inflates `.rlib` / rmeta sizes noticeably for every `cargo build --release`
# (even non-profiling runs). We therefore do NOT set `debug` in [profile.*]
# below — codegen tuning (lto/codegen-units) is a separate axis from
# debug-info and does not carry that cost.
#
# Instead: pass the env var once, at profiling time:
#
#   CARGO_PROFILE_BENCH_DEBUG=line-tables-only \
#     cargo build --bench heap_xthread \
#       --features "alloc-core alloc-xthread" --profile bench \
#       CARGO_TARGET_DIR=/tmp/sefer-fg-v3a
#
#   CARGO_PROFILE_RELEASE_DEBUG=line-tables-only \
#     cargo build --release --example malloc_macro \
#       --features "alloc-global alloc-xthread" \
#       CARGO_TARGET_DIR=/tmp/sefer-fg-v3a
#
# `line-tables-only` gives adequate function names + file/line for flamegraphs
# without the full DWARF variable info that `true`/`full` would add.
# Documented in docs/PROFILE_FLAMEGRAPHS.md §0.

# ── §0b — Release/bench codegen tuning (PERF-PASS-1 / task #49, G6/A1) ──────
#
# No [profile.*] section existed before this. mimalloc's C core is compiled
# by its build script at full optimization; the Rust side was running at the
# Cargo default of 16 codegen units with no LTO and unwind landing pads on
# every call. `codegen-units = 1` + `lto = "thin"` reliably improves register
# allocation/code layout on the branchy ~30-instruction alloc/free fast path.
# Known consequence: this shifts `npm run iai` instruction-count baselines —
# re-pin docs/perf/IAI_BASELINE.md after landing this (see that file's own
# regeneration rule). See docs/reviews/2026-07-10-perf-memory-layout-review.md
# finding 3 for the full rationale.
[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1
# NOTE: `panic = "abort"` was tried here per the review's "optionally" clause
# but Cargo unconditionally ignores `panic` for the `bench`/`test` profiles
# (warns "`panic` setting is ignored for `bench` profile") because the
# libtest/criterion harness requires unwinding to catch a failing
# iteration/assertion. Left out; `lto`/`codegen-units` still apply.
